@@ -8,6 +8,8 @@
 	* inst/include/includize.hpp: Included copy from @dcdillon's repo
 	* inst/include/toml.hpp: Idem
 
+	* inst/include/includize.hpp (includize): Do without codecvt
+
 2017-05-02  Dirk Eddelbuettel  <edd@debian.org>
 
 	* src/parse.cpp (tomlparseImpl): Convert the StretchyList to List
